syntax = "proto3";

package gedcom;
option go_package = "github.com/jochenboesmans/gedcom-parser/gedcom";

message Gedcom {
    repeated Individual Individuals = 1;
    repeated Family Families = 2;

    message Individual {
        string Id = 1;
        repeated Name Names = 2;
        string Gender = 3;
        repeated Event BirthEvents = 4;
        repeated Event DeathEvents = 5;

        message Event {
            Date Date = 1;
            string Place = 2;
            bool Primary = 3;
        }
        message Name {
            string GivenName = 1;
            string Surname = 2;
            bool Primary = 3;
        }
        message Date {
            string Year = 1;
            string Month = 2;
            string Day = 3;
        }
    }
    message Family {
        string Id = 1;
        string FatherId = 2;
        string MotherId = 3;
        repeated string ChildIds = 4;
    }
}
