syntax = "proto3";

package grpc;
option go_package = "github.com/jochenboesmans/gedcom-parser/grpc";

message PathsToFiles {
    string inputFilePath = 1;
    string outputFilePath = 2;
}

message Result {
    string message = 1;
    string error = 2;
}

service ParseService {
    rpc Parse(PathsToFiles) returns (Result) {}
}